@@ -26,16 +26,28 @@
 using std::filesystem::path;
 using __gnu_test::compare_paths;
 
+// Normalize directory-separators
+std::string operator""_norm(const char* s, std::size_t n)
+{
+  std::string str(s, n);
+#if defined(__MING32__) || defined(__MINGW64__)
+  for (auto& c : str)
+    if (c == '/')
+      c = '\\';
+#endif
+  return str;
+}
+
 void
 test01()
 {
   // C++17 [fs.path.gen] p5
-  compare_paths( path("/a/d").lexically_relative("/a/b/c"), "../../d" );
-  compare_paths( path("/a/b/c").lexically_relative("/a/d"), "../b/c" );
-  compare_paths( path("a/b/c").lexically_relative("a"), "b/c" );
-  compare_paths( path("a/b/c").lexically_relative("a/b/c/x/y"), "../.." );
+  compare_paths( path("/a/d").lexically_relative("/a/b/c"), "../../d"_norm );
+  compare_paths( path("/a/b/c").lexically_relative("/a/d"), "../b/c"_norm );
+  compare_paths( path("a/b/c").lexically_relative("a"), "b/c"_norm );
+  compare_paths( path("a/b/c").lexically_relative("a/b/c/x/y"), "../.."_norm );
   compare_paths( path("a/b/c").lexically_relative("a/b/c"), "." );
-  compare_paths( path("a/b").lexically_relative("c/d"), "../../a/b" );
+  compare_paths( path("a/b").lexically_relative("c/d"), "../../a/b"_norm );
 }
 
 void
@@ -43,10 +55,10 @@ test02()
 {
   path p = "a/b/c";
   compare_paths( p.lexically_relative(p), "." );
-  compare_paths( p.lexically_relative("a/../a/b/../b/c/../c/."), "../../b/c" );
+  compare_paths( p.lexically_relative("a/../a/b/../b/c/../c/."), "../../b/c"_norm );
   compare_paths( p.lexically_relative("../../../"), "" );
 
-  compare_paths( path("a/./.").lexically_relative("a"), "./." );
+  compare_paths( path("a/./.").lexically_relative("a"), "./."_norm );
 }
 
 void
